# gbiznfo-mcp

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.cursor/rules/: gbizinfo-mcp-project.mdc  mcp-architecture.mdc  no-openapi-generator.mdc  openapi-client.mdc  python-fastmcp.mdc  python-typed-implementation.mdc  security-and-config.mdc
examples/: dev.ts
javascript/: README.md  package-lock.json  package.json  tsconfig.json
javascript/src/: config.ts
javascript/src/mcp/: server.ts
javascript/src/model/: Company.ts
javascript/src/presenter/: CompanyPresenter.ts
javascript/src/services/: gbizinfoApiClient.ts  http.ts  types.ts
javascript/src/services/adapters/: gbizinfoOpenapiAdapter.ts
javascript/src/types/: mcp-sdk.d.ts
openapi/: gbizinfo-openapi.json
python/: .gitignore  README.md  pyproject.toml
python/src/gbizinfo_mcp/: config.py  errors.py  mcp_fastmcp.py
python/src/gbizinfo_mcp/model/: __init__.py  company.py  company_basic.py  company_page.py  hojin_info.py  pagination.py  raw.py  search.py  update_page.py
python/src/gbizinfo_mcp/services/: gbizinfo_service.py  http.py
python/src/gbizinfo_mcp/services/adapters/: gbizinfo_adapter.py
python/src/gbizinfo_mcp/tests/: test_router.py  test_service.py  test_updates_router.py  test_validation.py
python/src/gbizinfo_mcp/utils/: normalize.py  validation.py
src/: cli.ts  errors.ts  index.ts
src/controller/: CompanySearchController.ts
src/mcp/: server.ts
src/model/: Company.ts  Pagination.ts
src/presenter/: CompanyPresenter.ts
src/services/: endpoints.ts  gbizinfoService.ts
src/utils/: env.ts  jis.ts  validation.ts
