[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gbizinfo-mcp"
version = "0.1.0"
description = "gBizINFO MCP implementation (Python)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gbizinfo-mcp maintainers" }]
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pytest>=8",
  "fastmcp>=0.1.0",
  "ruff>=0.5.0",
]

[project.scripts]
gbizinfo-mcp = "gbizinfo_mcp.mcp_fastmcp:main"

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
exclude = [
  ".venv",
  "**/__pycache__",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "src/gbizinfo_mcp.egg-info",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "BLE", "FBT", "N", "ARG"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["gbizinfo_mcp"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gbizinfo_mcp*"]

